# ctrlrunner

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SKILL.md  cliff.toml  ctrlrunner.toml  pyproject.toml  pyrunner.toml
.claude/: settings.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: changelog.yml  ci.yml  codeql.yml  publish.yml
docs/: MIGRATION.md  SECURITY.md  config-reference.md  development.md  event-model.md  hooks.md  html-report-and-ui.md  migrating-from-pytest.md  parallelism-and-scheduling.md  pytest-hooks-parity-plan.md  reporters-and-history.md  tracing-and-artifacts.md
examples/: test_example.py  test_selftest.py  test_very_long_test_name_with_lots_of_words_to_test_the_truncation_of_test_names_in_the_report_and_logs_example.py
examples/advanced/: conftest.py  test_advanced.py
frontend/: README.md  biome.json  index.html  package-lock.json  package.json  ui.html  vite.config.ts  vite.ui.config.ts
graphify-out/: .graphify_labels.json  .graphify_python  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
pyrunner/: __init__.py  cli.py
pyrunner/config/: __init__.py  config.py  projects.py  tag_registry.py
pyrunner/core/: __init__.py  annotations.py  assert_introspect.py  (+6 more)
scripts/: benchmark_discovery.py  run_tests_parallel.py
tests/: test_annotations.py  test_assert_introspect.py  test_backward_compatibility.py  test_cli.py  test_collection_summary.py  test_config.py  test_context_info.py  test_coverage_support.py  test_di.py  test_events.py  test_fail_policy.py  test_fixtures_advanced.py  test_flaky.py  test_grouping.py  test_history.py  test_hookcompat.py  test_html_report.py  test_list_output.py  test_localsec.py  test_log_capture.py  test_log_redaction.py  test_manifest.py  test_migrate.py  test_options.py  test_orchestrator_and_worker.py  test_playwright_actions.py  test_playwright_fixtures.py  test_projects.py  test_quarantine.py  test_registry.py  test_report_paths.py  test_reporter.py  test_reporters.py  test_rerun.py  test_run_controller.py  test_selection.py  test_sharding.py  test_show_report.py  test_steps.py  test_tag_registry.py  (+4 more)
(+124 files in other folders)
