[project]
name = "ctrlrunner"
version = "0.1.0"
description = "A from-scratch Python test runner for Playwright: real OS-process workers, hard-kill timeouts via Windows Job Objects, no pytest dependency."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Alex" }]
keywords = [
    "playwright",
    "test-runner",
    "parallel-testing",
    "windows",
    "job-object",
    "timeout",
    "pytest-alternative",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/CtrlRunner/ctrlrunner"
Repository = "https://github.com/CtrlRunner/ctrlrunner"
Issues = "https://github.com/CtrlRunner/ctrlrunner/issues"

[project.optional-dependencies]
playwright = ["playwright>=1.61.0"]
migrate = ["libcst>=1.8.6"]
windows = ["pywin32; sys_platform == 'win32'"]
coverage = ["coverage[toml]>=7"]

[project.scripts]
ctrlrunner = "ctrlrunner.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ctrlrunner"]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "ty>=0.0.1a1",
    "coverage[toml]>=7",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["ctrlrunner-artifacts", "reports", "examples"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",  # line length is handled by the formatter, not worth hard-failing lint on
]

[tool.ruff.lint.isort]
known-first-party = ["ctrlrunner"]

[tool.ruff.format]
quote-style = "double"

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
include = ["src/ctrlrunner"]
exclude = ["ctrlrunner-artifacts", "reports", "examples", "tests"]
